headless-stateful-set1.yaml
apiVersion: apps/v1

kind: StatefulSet

metadata:
  name: mysql
  labels:
    app: mysql

spec:
  serviceName: mysql-h
  selector:
    matchLabels:
      app: mysql
  replicas: 3
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
