nginx-deployment1.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: myapp-deploy
  labels:
    app: myapp

spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
    spec:
      containers:
        - name: nginx-containers
          image: nginx
