nginx-pod-annot1.yml
apiVersion: v1

kind: Pod

metadata:
  name: myapp-pod
  labels:
    app: myapp
  annotations:
    phone: 714-721-8729

spec:
  containers:
    - name: nginx-containers
      image: nginx
