nginx-pod-restart1.yml
apiVersion: v1

kind: Pod

metadata:
  name: myapp-pod
  labels:
    app: myapp

spec:
  restartPolicy: Never
  containers:
    - name: nginx-containers
      image: nginx
