pod-vol1.yml
apiVersion: v1
kind: Pod
metadata:
  name: random-number-generator
spec:
  containers:
    - image: alpine
      name: alpine
      command: ["/bin/sh", "-c"]
      args: ["shuf -i 0-100 -n 1 >> /opt/number.out;"]
      volumeMounts:
        - name: data-volume
          mountPath: /opt

  volumes:
    - name: data-volume
      hostPath:
        path: /data
        type: Directory
    - name: data-volume2
      awsElasticBlockStore:
        volumeID: volID
        fsType: ext4
    - name: mypd
      persistentVolumeClaim:
        claimName: myclaim
