headless-service1.yaml
apiVersion: v1

kind: Service

metadata:
  name: mysql-h

spec:
  clusterIP: None
  ports:
    - port: 3306
  selector:
    app: mysql
