ingress-ware-watch2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
    - host: wear.my-online-store.com
      http:
      paths:
        - backend:
            serviceName: ware-service
            servicePort: 80
    - host: watch.my-online-store.com
      http:
      paths:
        - backend:
            serviceName: watch-service
            servicePort: 80
